# text-search

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
gne-text-search/: Cargo.toml
text-search/: Cargo.toml
text-search-sys/: Cargo.toml  build.rs
text-search-sys/src/: lib.rs
text-search/src/: counted_set.rs  lib.rs
