[package]
name = "text-search-sys"
version = "0.1.0"
authors = ["Anthony Drendel <me@anthonydrendel.com>"]
edition = "2018"
links = "GNETextSearch"
description = "Raw bindings to the GNETextSearch C library"
license = "BSD-2-Clause"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.52"
